switched entire regex project to typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
 	"compilerOptions": {
-        "lib": ["es6", "dom"]
+        "lib": ["es6", "dom"],
+        "target": "es6",
+        "incremental": true,
+        "outDir": "./js"
     }
 }
