--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
 	"compilerOptions": {
         "lib": ["es6", "dom"],
-        "target": "es6",
+        "target": "es2015",
+        "downlevelIteration": true,
         "incremental": true,
         "outDir": "./js"
     }
