--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "target": "es6",
         "downlevelIteration": true,
         "incremental": true,
+        "module": "commonjs",
         "outDir": "./js"
     }
 }
