--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
         "target": "es6",
         "downlevelIteration": true,
         "incremental": true,
-        "module": "es6",
+        "module": "commonjs",
         "outDir": "./js"
     },
     "files": [
